Fixes scroll locked after closing modals. Fixes potential UI freeze on iOS. Fixes cordova-plugin-minisodium installation from NPM

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -462,6 +462,11 @@ html, body {
   }
 }
 
+// Fix for iOS 11+
+.ios ion-content {
+  pointer-events: auto;
+}
+
 .popover-share {
   height: 110px;
 
